# RayTrace-Playground

./: CMakeLists.txt  LICENSE  README.md
extlib/SDL2-2.0.12/: CMakeCache.txt
extlib/SDL2-Build/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
extlib/SDL2-Build/include/: SDL_config.h
extlib/cxxopts-master/: cxxopts-targets.cmake  install_manifest.txt
extlib/cxxopts-master/test/: link_test
generated_images/: 1.tiff  2smlGuDgjk.tiff  3.tiff  4.tiff  5.tiff  6.tiff  7.tiff  8.tiff  igEHsJ3Cou.tiff  jyD9pkYSAM.tiff  modified_cornell.tiff
include/: AABB.h  AARect.h  BVH.h  Box.h  Camera.h  Color.h  Constant_Medium.h  Hittable.h  Hittable_List.h  Light.h  Material.h  Perlin.h  Ray.h  Sphere.h  Texture.h  Utilities.h  Vec3.h  Vect.h
src/: RayTracer.cpp
